# example-rust-axum-api

./: Cargo.toml  Feedback App.postman_collection.json  Makefile  README.md  docker-compose.yml
migrations/: 20240814125316_init.up.sql
src/: model.rs
